tests/purs/failing/CycleInKindDeclaration.out
Error found:
at tests/purs/failing/CycleInKindDeclaration.purs:7:1 - 7:24 (line 7, column 1 - line 7, column 24)

  A cycle appears in a set of kind declarations:

    {[33mBar[0m, [33mFoo[0m}

  Kind declarations may not refer to themselves in their own signatures.


See https://github.com/purescript/documentation/blob/master/errors/CycleInKindDeclaration.md for more information,
or to contribute content related to this error.

